# scoped

./: .gitignore  Cargo.toml  Readme.md
assets/models/locations/: location-1.glb  location-2.glb  location-3.glb  location-4.glb
src/: location.rs  main.rs
