[package]
name = "locations"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
# opt-level = 'z' # wasm less size 

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
    "dynamic_linking",
    "3d",
]
